--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+### Note: This fork is adapted for compilation using recent versions of Clang and GCC, which we ensure with a [GitHub action](https://github.com/hyrise/ssb-dbgen/actions).
+
+# SSB Data Generator
+
 Note: In our research paper we use the SSB instead of SSBM
 Version of 2/28/10: 
 Cardinality of supplier fixed to follow benchmark spec: now 2000*SF
