--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+![Build Status](https://github.com/hyrise/ssb-dbgen/actions/workflows/ci.yml/badge.svg)
 ### Note: This fork is adapted for compilation using recent versions of Clang and GCC, which we ensure with a [GitHub action](https://github.com/hyrise/ssb-dbgen/actions).
 
 # SSB Data Generator
